# oss-maintainer-kit

./: .gitignore  .semgrep.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  maintainer-dashboard.yml  security.yml
docs/: CODEX_FOR_OSS_PLAN.md  CONTRIBUTOR_OUTREACH.md  MAINTAINER_PLAYBOOK.md  PROJECT_SPEC.md  SECURITY_HARDENING.md
examples/: github-workflow.yml  maintainer-dashboard-workflow.yml  sample-issue.md  sample-report.md
src/oss_maintainer_kit/: __init__.py  audit.py  cli.py  github.py  models.py  report.py  security_scan.py
tests/: test_audit.py  test_cli.py  test_github.py  test_security_scan.py  test_workflows.py
