[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-maintainer-kit"
version = "0.2.0"
description = "Audit open-source repositories for maintainer readiness and Codex-friendly workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Micl4269" }]
keywords = [
  "open-source",
  "maintainers",
  "github-actions",
  "codex",
  "repository-health",
  "issue-triage",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
oss-maintainer-kit = "oss_maintainer_kit.cli:main"

[project.urls]
Homepage = "https://github.com/Micl4269/oss-maintainer-kit"
Issues = "https://github.com/Micl4269/oss-maintainer-kit/issues"
Source = "https://github.com/Micl4269/oss-maintainer-kit"

[tool.setuptools.packages.find]
where = ["src"]
